--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,10 +10,10 @@
 
 <body>
     <div class="button-container">
-        <a href="/tavern" class="button" th:text="#{tavern}">Tavern</a>
+        <a th:href="@{/player(target=TAVERN)}" class="button" th:text="#{tavern}">Tavern</a>
+        <a th:href="@{/player(target=TAVERN_LOCATIONS)}" class="button" th:text="#{tavernLocations}">Tavern Locations</a>
         <a th:href="@{/player(target=DETAILS)}" class="button" th:text="#{playerInventory}">Player Inventory</a>
-        <a href="/dungeons" class="button" th:text="#{dungeons}">Dungeons</a>
-        <a href="/magic-shop" class="button" th:text="#{magicShop}">Magic Shop</a>
+        <a th:href="@{/player(target=DUNGEONS)}" class="button" th:text="#{dungeons}">Dungeons</a>
         <a th:href="@{/player(target=SHOP)}" class="button" th:text="#{weaponShop}">Weapon Shop</a>
         <a href="/legacy-leaderboard" class="button" th:text="#{legacyLeaderboard}">Legacy Leaderboard</a>
         <a href="/guilds" class="button" th:text="#{guilds}">Guilds</a>
