--- a/src/main/resources/templates/tavern/tavern-location.html
+++ b/src/main/resources/templates/tavern/tavern-location.html
@@ -85,7 +85,7 @@
 <div class="container">
     
     <div class="action-buttons">
-        <a th:href="@{/player(target=TAVERN)}" th:text="#{backToPlayerList}">Back to Player List</a>
+        <a th:href="@{/player(target=TAVERN_LOCATIONS)}" th:text="#{backToPlayerList}">Back to Player List</a>
         <a href="/" th:text="#{backToMainMenu}">Back to Main Menu</a>
     </div>
     
